--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik+Beastly&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <main class="mainEl">
+      <div class="loginDiv">
+        <a href="login.html" class="btn loginBtn">login</a>
+      </div>
+      <div class="registerDiv">
+        <a href="register.html" class="btn registerBtn">register</a>
+      </div>
+    </main>
+  </body>
 </html>
