--- a/frontend/homepage/index.html
+++ b/frontend/homepage/index.html
@@ -8,16 +8,19 @@
       href="https://fonts.googleapis.com/css2?family=Rubik+Beastly&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="home.css" />
     <title>Document</title>
   </head>
   <body>
+    <header class="header">
+      <h1>Codenames</h1>
+    </header>
     <main class="mainEl">
       <div class="loginDiv">
-        <a href="login.html" class="btn loginBtn">login</a>
+        <a href="../login/login.html" class="btn loginBtn">login</a>
       </div>
       <div class="registerDiv">
-        <a href="register.html" class="btn registerBtn">register</a>
+        <a href="../register/register.html" class="btn registerBtn">register</a>
       </div>
     </main>
   </body>
