--- a/frontend/register/register.html
+++ b/frontend/register/register.html
@@ -8,11 +8,11 @@
     <title>Document</title>
   </head>
   <body>
-    <main class="loginMain">
+    <main class="registerMain">
       <header class="header">
         <h1 class="regHeader">Registration Form</h1>
       </header>
-      <form action="login.html" method="post" id="myForm" class="loginForm">
+      <form action="login.html" method="post" id="myForm" class="registerForm">
         <div class="col userName">
           <label for="user" id="userLabel">Username</label>
           <input type="text" id="user" name="username" />
