--- a/frontend/login/login.html
+++ b/frontend/login/login.html
@@ -4,16 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="login.css" />
     <title>Document</title>
   </head>
   <body>
-    <form action="#" id="loginForm" method="POST">
-      <label for="username">username</label>
-      <input type="text" id="username" name="username" />
-      <label for="password">password</label>
-      <input type="password" id="password" name="password" />
-      <input type="submit" value="send" />
-    </form>
+    <main class="loginMain">
+      <header class="loginHeader">
+        <h1>Login Form</h1>
+      </header>
+      <form action="#" id="loginForm" method="POST" class="loginForm">
+        <div class="col userName">
+          <label for="username">username</label>
+          <input type="text" id="username" name="username" />
+        </div>
+        <div class="col password">
+          <label for="password">password</label>
+          <input type="password" id="password" name="password" />
+        </div>
+        <div class="col loginDiv"></div>
+        <input type="submit" value="Login" class="loginBtn" />
+      </form>
+    </main>
+
     <script src="script.js"></script>
   </body>
 </html>
