added script path in html file

--- a/frontend/login/login.html
+++ b/frontend/login/login.html
@@ -26,6 +26,8 @@
       </form>
     </main>
 
-    <script src="script.js"></script>
+    <!-- <script src="../genScripts/script.js"></script> -->
+    <script src="../login/login.js"></script>
+    <script src="../genScripts/common.js"></script>
   </body>
 </html>
