changed file structure

--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="../styles/login.css" />
     <title>Document</title>
   </head>
   <body>
@@ -27,7 +27,7 @@
     </main>
 
     <!-- <script src="../genScripts/script.js"></script> -->
-    <script src="../login/login.js"></script>
-    <script src="../genScripts/common.js"></script>
+    <script src="../scripts/login.js"></script>
+    <script src="../scripts/common.js"></script>
   </body>
 </html>
