--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Rubik+Beastly&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="home.css" />
+    <link rel="stylesheet" href="../styles/home.css" />
     <title>Document</title>
   </head>
   <body>
@@ -17,10 +17,10 @@
     </header>
     <main class="mainEl">
       <div class="loginDiv">
-        <a href="../login/login.html" class="btn loginBtn">login</a>
+        <a href="../html/login.html" class="btn loginBtn">login</a>
       </div>
       <div class="registerDiv">
-        <a href="../register/register.html" class="btn registerBtn">register</a>
+        <a href="../html/register.html" class="btn registerBtn">register</a>
       </div>
     </main>
   </body>
