modified register and login pages

--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -23,6 +23,10 @@
         </div>
         <div class="col loginDiv"></div>
         <input type="submit" value="Login" class="loginBtn" />
+        <div class="registerNow">
+          Don't have account yet?
+          <a href="../html/register.html"><span>Register Now.</span></a>
+        </div>
       </form>
     </main>
 
