--- a/frontend/html/register.html
+++ b/frontend/html/register.html
@@ -28,6 +28,10 @@
         <div class="submitBtn">
           <input type="submit" value="register" class="sendBtn" />
         </div>
+        <div class="loginNow">
+          Alreaty have account?
+          <span><a href="../html/login.html">Login.</a></span>
+        </div>
       </form>
     </main>
 
