finalized login, register and homepages

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -23,5 +23,6 @@
         <a href="../html/register.html" class="btn registerBtn">register</a>
       </div>
     </main>
+    <script src="../scripts/common.js" type="module"></script>
   </body>
 </html>
