--- a/frontend/html/register.html
+++ b/frontend/html/register.html
@@ -12,7 +12,7 @@
       <header class="header">
         <h1 class="regHeader">Registration Form</h1>
       </header>
-      <form action="login.html" method="post" id="myForm" class="registerForm">
+      <form action="#" id="registerForm" method="POST" class="registerForm">
         <div class="col userName">
           <label for="user" id="userLabel">Username</label>
           <input type="text" id="user" name="username" />
@@ -29,12 +29,11 @@
           <input type="submit" value="register" class="sendBtn" />
         </div>
         <div class="loginNow">
-          Alreaty have account?
-          <span><a href="../html/login.html">Login.</a></span>
+          Already have account?
+          <span><a href="./login.html">Login.</a></span>
         </div>
       </form>
     </main>
-
-    <script src=""></script>
+    <script src="../scripts/register.js" type="module"></script>
   </body>
 </html>
