--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -30,8 +30,6 @@
       </form>
     </main>
 
-    <!-- <script src="../genScripts/script.js"></script> -->
-    <script src="../scripts/login.js"></script>
-    <script src="../scripts/common.js"></script>
+    <script src="../scripts/login.js" type="module"></script>
   </body>
 </html>
