added sticky navbar

--- a/frontend/html/lobby.html
+++ b/frontend/html/lobby.html
@@ -8,7 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header sticky">
       <div class="left">
         <button class="btn refreshBtn">Refresh Games</button>
         <button class="btn createBTN">Create Game</button>
