pure js to node.js

--- a/node_backend/html/index.html
+++ b/node_backend/html/index.html
@@ -17,12 +17,11 @@
     </header>
     <main class="mainEl">
       <div class="loginDiv">
-        <a href="../html/login.html" class="btn loginBtn">login</a>
+        <a href="./login.html" class="btn loginBtn">login</a>
       </div>
       <div class="registerDiv">
-        <a href="../html/register.html" class="btn registerBtn">register</a>
+        <a href="./register.html" class="btn registerBtn">register</a>
       </div>
     </main>
-    <script src="../scripts/common.js" type="module"></script>
   </body>
 </html>
