--- a/node_backend/html/login.html
+++ b/node_backend/html/login.html
@@ -22,6 +22,7 @@
           <input type="password" id="password" name="password" />
         </div>
         <div class="col loginDiv"></div>
+
         <input type="submit" value="Login" class="loginBtn" />
         <div class="registerNow">
           Don't have account yet?
@@ -29,6 +30,7 @@
         </div>
       </form>
     </main>
+    <a href="./lobby.html"></a>
 
     <script src="../scripts/login.js" type="module"></script>
   </body>
