modified game page and scripts

--- a/node_frontend/html/game.html
+++ b/node_frontend/html/game.html
@@ -20,9 +20,9 @@
       </section>
       <section class="board">
         <div class="row header">
-          <h1 class="headerH1">
-            <span class="spyMaster">Person</span> is playing...
-          </h1>
+          <p class="lefToGuessRed"></p>
+          <button class="btn startGameBtn hidden">Start Game</button>
+          <p class="lefToGuessBlue"></p>
         </div>
         <div class="row">
           <button class="btn card">-</button>
@@ -60,7 +60,7 @@
           <button class="btn card">-</button>
         </div>
         <div class="row end">
-          <button class="endTurnBtn">End turn</button>
+          <button class="endTurnBtn hidden">End turn</button>
         </div>
       </section>
       <section class="team team2">
