--- a/node_frontend/html/lobby.html
+++ b/node_frontend/html/lobby.html
@@ -22,6 +22,7 @@
     <main class="main">
       <section class="gameSection"></section>
     </main>
+    <a href="./game.html"></a>
     <script src="../scripts/lobby.js" type="module"></script>
   </body>
 </html>
