--- a/node_frontend/html/game.html
+++ b/node_frontend/html/game.html
@@ -69,7 +69,7 @@
         <div class="info team2Info">
           <p class="lefToGuessBlue"></p>
           <p class="operativeLabel">Operatives:</p>
-          <p class="operatives" id="2">Operatives:</p>
+          <p class="operatives" id="2"></p>
           <p class="spy">Spymaster:</p>
           <p class="spymaster2">-</p>
           <div class="buttonDiv">
