added play turn timer

--- a/node_frontend/html/game.html
+++ b/node_frontend/html/game.html
@@ -25,6 +25,7 @@
       <section class="board">
         <div class="row header">
           <button class="btn startGameBtn hidden">Start Game</button>
+          <p id="time" class="timer none"></p>
         </div>
         <div class="row">
           <button class="btn card">-</button>
