--- a/node_frontend/html/login.html
+++ b/node_frontend/html/login.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main class="loginMain">
-      <header class="loginHeader">
+      <header class="loginHeader" id="time">
         <h1>Login Form</h1>
       </header>
       <form action="#" id="loginForm" method="POST" class="loginForm">
@@ -21,7 +21,7 @@
           <label for="password">password</label>
           <input type="password" id="password" name="password" />
         </div>
-        <div class="col loginDiv"></div>
+        <div class="col error" id="error"></div>
 
         <input type="submit" value="Login" class="loginBtn" />
         <div class="registerNow">
