--- a/node_frontend/html/index.html
+++ b/node_frontend/html/index.html
@@ -15,13 +15,17 @@
     <header class="header">
       <h1>Codenames</h1>
     </header>
-    <main class="mainEl">
-      <div class="loginDiv">
-        <a href="./login.html" class="btn loginBtn">login</a>
-      </div>
-      <div class="registerDiv">
-        <a href="./register.html" class="btn registerBtn">register</a>
-      </div>
+    <main class="main">
+      <section class="mainEl">
+        <div class="loginDiv">
+          <a href="./login.html" class="btn loginBtn">logi<span>n</span> </a>
+        </div>
+        <div class="registerDiv">
+          <a href="./register.html" class="btn registerBtn"
+            >registe<span>r</span></a
+          >
+        </div>
+      </section>
     </main>
   </body>
 </html>
