changed game board size

--- a/frontend/html/game.html
+++ b/frontend/html/game.html
@@ -23,48 +23,50 @@
         </div>
       </section>
       <section class="board">
-        <div class="row header">
-          <button class="btn startGameBtn hidden">Start Game</button>
-          <p id="time" class="timer none"></p>
-        </div>
-        <div class="row">
-          <button class="btn card">-</button>
-          <button class="btn card">-</button>
-          <button class="btn card">-</button>
-          <button class="btn card">-</button>
-          <button class="btn card">-</button>
-        </div>
-        <div class="row">
-          <button class="btn card">-</button>
-          <button class="btn card">-</button>
-          <button class="btn card">-</button>
-          <button class="btn card">-</button>
-          <button class="btn card">-</button>
-        </div>
-        <div class="row">
-          <button class="btn card">-</button>
-          <button class="btn card">-</button>
-          <button class="btn card">-</button>
-          <button class="btn card">-</button>
-          <button class="btn card">-</button>
-        </div>
-        <div class="row">
-          <button class="btn card">-</button>
-          <button class="btn card">-</button>
-          <button class="btn card">-</button>
-          <button class="btn card">-</button>
-          <button class="btn card">-</button>
-        </div>
-        <div class="row">
-          <button class="btn card">-</button>
-          <button class="btn card">-</button>
-          <button class="btn card">-</button>
-          <button class="btn card">-</button>
-          <button class="btn card">-</button>
-        </div>
-        <div class="row end">
-          <button class="endTurnBtn hidden">End turn</button>
-        </div>
+        <section class="center">
+          <div class="row header">
+            <button class="btn startGameBtn hidden">Start Game</button>
+            <p id="time" class="timer none"></p>
+          </div>
+          <div class="row">
+            <button class="btn card">-</button>
+            <button class="btn card">-</button>
+            <button class="btn card">-</button>
+            <button class="btn card">-</button>
+            <button class="btn card">-</button>
+          </div>
+          <div class="row">
+            <button class="btn card">-</button>
+            <button class="btn card">-</button>
+            <button class="btn card">-</button>
+            <button class="btn card">-</button>
+            <button class="btn card">-</button>
+          </div>
+          <div class="row">
+            <button class="btn card">-</button>
+            <button class="btn card">-</button>
+            <button class="btn card">-</button>
+            <button class="btn card">-</button>
+            <button class="btn card">-</button>
+          </div>
+          <div class="row">
+            <button class="btn card">-</button>
+            <button class="btn card">-</button>
+            <button class="btn card">-</button>
+            <button class="btn card">-</button>
+            <button class="btn card">-</button>
+          </div>
+          <div class="row">
+            <button class="btn card">-</button>
+            <button class="btn card">-</button>
+            <button class="btn card">-</button>
+            <button class="btn card">-</button>
+            <button class="btn card">-</button>
+          </div>
+          <div class="row end">
+            <button class="endTurnBtn hidden">End turn</button>
+          </div>
+        </section>
       </section>
       <section class="team team2">
         <div class="info team2Info">
